--- a/package.json
+++ b/package.json
@@ -9,9 +9,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.37"
+    "@auth0/auth0-vue": "^2.3.3",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@huasi/text-shuffle": "^1.0.6",
+    "axios": "^1.7.7",
+    "color.js": "^1.2.0",
+    "copy-text-to-clipboard": "^3.2.0",
+    "highlight.js": "^11.10.0",
+    "pinia": "^2.2.2",
+    "sass": "^1.79.3",
+    "sass-loader": "^16.0.2",
+    "vue": "^3.4.37",
+    "vue-router": "^4.4.5",
+    "vue-tippy": "v6",
+    "vue3-toastify": "^0.2.3"
   },
   "devDependencies": {
+    "@types/node": "^22.10.1",
     "@vitejs/plugin-vue": "^5.1.2",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
